Phase 1/gen/main/grammar/SimpleLOOPParser.java
// Generated from D:/CE@UT/Term 6/PLC/CA/antlr_intro/src/main/grammar\SimpleLOOP.g4 by ANTLR 4.9.2
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleLOOPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Private=1, Public=2, Int=3, Bool=4, BoolLiteral=5, IntLiteral=6, Class=7, 
		Fptr=8, Set=9, Comma=10, Void=11, If=12, Elsif=13, Else=14, Self=15, Print=16, 
		Add=17, Merge=18, Include=19, Delete=20, New=21, Initialize=22, Return=23, 
		Each=24, Do=25, Bar=26, LeftBracket=27, RightBracket=28, LeftParenthesis=29, 
		RightParenthesis=30, LeftCurlyBracket=31, RightCurlyBracket=32, Assign=33, 
		Plus=34, Minus=35, Multiply=36, Division=37, PlusPlus=38, MinusMinus=39, 
		Ternary=40, Colon=41, Not=42, And=43, Or=44, Equals=45, Dot=46, Arrow=47, 
		NewLine=48, Less=49, Greater=50, Semicolon=51, ClassIndentifier=52, Identifier=53, 
		Comment=54, MultilineComment=55, WS=56, FloorDivision=57;
	public static final int
		RULE_simpleLOOP = 0, RULE_globalSection = 1, RULE_classSection = 2, RULE_classDeclaration = 3, 
		RULE_classBody = 4, RULE_classVariable = 5, RULE_classMethod = 6, RULE_scope = 7, 
		RULE_multiStatements = 8, RULE_singleStatement = 9, RULE_ifStatement = 10, 
		RULE_returnStatement = 11, RULE_iterativeStatement = 12, RULE_statement = 13, 
		RULE_methodArguments = 14, RULE_methodCallStatement = 15, RULE_mergeStatement = 16, 
		RULE_addStatement = 17, RULE_deleteStatement = 18, RULE_printStatement = 19, 
		RULE_methodDeclarationArguments = 20, RULE_singleMethodArgument = 21, 
		RULE_variableDeclaration = 22, RULE_identifiers = 23, RULE_type = 24, 
		RULE_arrayType = 25, RULE_fptrType = 26, RULE_setType = 27, RULE_assignStatement = 28, 
		RULE_expression = 29, RULE_assignExpression = 30, RULE_ternaryExpression = 31, 
		RULE_logicalOrExpression = 32, RULE_logicalAndExpression = 33, RULE_equalityExpression = 34, 
		RULE_relationalExpression = 35, RULE_additiveExpression = 36, RULE_multiplicativeExpression = 37, 
		RULE_notExpression = 38, RULE_unaryExpression = 39, RULE_accessExpression = 40, 
		RULE_defaultExpressions = 41, RULE_values = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"simpleLOOP", "globalSection", "classSection", "classDeclaration", "classBody", 
			"classVariable", "classMethod", "scope", "multiStatements", "singleStatement", 
			"ifStatement", "returnStatement", "iterativeStatement", "statement", 
			"methodArguments", "methodCallStatement", "mergeStatement", "addStatement", 
			"deleteStatement", "printStatement", "methodDeclarationArguments", "singleMethodArgument", 
			"variableDeclaration", "identifiers", "type", "arrayType", "fptrType", 
			"setType", "assignStatement", "expression", "assignExpression", "ternaryExpression", 
			"logicalOrExpression", "logicalAndExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"notExpression", "unaryExpression", "accessExpression", "defaultExpressions", 
			"values"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'private'", "'public'", "'int'", "'bool'", null, null, "'class'", 
			"'fptr'", "'Set'", "','", "'void'", "'if'", "'elsif'", "'else'", "'self'", 
			"'print'", "'add'", "'merge'", "'include'", "'delete'", "'new'", "'initialize'", 
			"'return'", "'each'", "'do'", "'|'", "'['", "']'", "'('", "')'", "'{'", 
			"'}'", "'='", "'+'", "'-'", "'*'", "'/'", "'++'", "'--'", "'?'", "':'", 
			"'!'", "'&&'", "'||'", "'=='", "'.'", "'->'", null, "'<'", "'>'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Private", "Public", "Int", "Bool", "BoolLiteral", "IntLiteral", 
			"Class", "Fptr", "Set", "Comma", "Void", "If", "Elsif", "Else", "Self", 
			"Print", "Add", "Merge", "Include", "Delete", "New", "Initialize", "Return", 
			"Each", "Do", "Bar", "LeftBracket", "RightBracket", "LeftParenthesis", 
			"RightParenthesis", "LeftCurlyBracket", "RightCurlyBracket", "Assign", 
			"Plus", "Minus", "Multiply", "Division", "PlusPlus", "MinusMinus", "Ternary", 
			"Colon", "Not", "And", "Or", "Equals", "Dot", "Arrow", "NewLine", "Less", 
			"Greater", "Semicolon", "ClassIndentifier", "Identifier", "Comment", 
			"MultilineComment", "WS", "FloorDivision"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleLOOP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleLOOPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SimpleLOOPContext extends ParserRuleContext {
		public GlobalSectionContext globalSection() {
			return getRuleContext(GlobalSectionContext.class,0);
		}
		public ClassSectionContext classSection() {
			return getRuleContext(ClassSectionContext.class,0);
		}
		public List<TerminalNode> NewLine() { return getTokens(SimpleLOOPParser.NewLine); }
		public TerminalNode NewLine(int i) {
			return getToken(SimpleLOOPParser.NewLine, i);
		}
		public SimpleLOOPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleLOOP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterSimpleLOOP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitSimpleLOOP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitSimpleLOOP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleLOOPContext simpleLOOP() throws RecognitionException {
		SimpleLOOPContext _localctx = new SimpleLOOPContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_simpleLOOP);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			globalSection();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NewLine) {
				{
				{
				setState(87);
				match(NewLine);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			classSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalSectionContext extends ParserRuleContext {
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<TerminalNode> NewLine() { return getTokens(SimpleLOOPParser.NewLine); }
		public TerminalNode NewLine(int i) {
			return getToken(SimpleLOOPParser.NewLine, i);
		}
		public GlobalSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterGlobalSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitGlobalSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitGlobalSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalSectionContext globalSection() throws RecognitionException {
		GlobalSectionContext _localctx = new GlobalSectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalSection);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NewLine) {
						{
						{
						setState(95);
						match(NewLine);
						}
						}
						setState(100);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(101);
					variableDeclaration();
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassSectionContext extends ParserRuleContext {
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public ClassSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassSectionContext classSection() throws RecognitionException {
		ClassSectionContext _localctx = new ClassSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Class) {
				{
				{
				setState(107);
				classDeclaration();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public Token className;
		public Token parent;
		public TerminalNode Class() { return getToken(SimpleLOOPParser.Class, 0); }
		public TerminalNode LeftCurlyBracket() { return getToken(SimpleLOOPParser.LeftCurlyBracket, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode RightCurlyBracket() { return getToken(SimpleLOOPParser.RightCurlyBracket, 0); }
		public List<TerminalNode> ClassIndentifier() { return getTokens(SimpleLOOPParser.ClassIndentifier); }
		public TerminalNode ClassIndentifier(int i) {
			return getToken(SimpleLOOPParser.ClassIndentifier, i);
		}
		public TerminalNode Less() { return getToken(SimpleLOOPParser.Less, 0); }
		public List<TerminalNode> NewLine() { return getTokens(SimpleLOOPParser.NewLine); }
		public TerminalNode NewLine(int i) {
			return getToken(SimpleLOOPParser.NewLine, i);
		}
		public ClassVariableContext classVariable() {
			return getRuleContext(ClassVariableContext.class,0);
		}
		public ClassMethodContext classMethod() {
			return getRuleContext(ClassMethodContext.class,0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDeclaration);
		int _la;
		try {
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(Class);
				setState(114);
				((ClassDeclarationContext)_localctx).className = match(ClassIndentifier);
				System.out.println("ClassDec : " + (((ClassDeclarationContext)_localctx).className!=null?((ClassDeclarationContext)_localctx).className.getText():null));
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Less) {
					{
					setState(116);
					match(Less);
					setState(117);
					((ClassDeclarationContext)_localctx).parent = match(ClassIndentifier);
					System.out.println("Inheritance : " + (((ClassDeclarationContext)_localctx).className!=null?((ClassDeclarationContext)_localctx).className.getText():null) + " < " + (((ClassDeclarationContext)_localctx).parent!=null?((ClassDeclarationContext)_localctx).parent.getText():null));
					}
				}

				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NewLine) {
					{
					{
					setState(121);
					match(NewLine);
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(127);
				match(LeftCurlyBracket);
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(128);
					match(NewLine);
					}
					}
					setState(131); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NewLine );
				setState(133);
				classBody();
				setState(134);
				match(RightCurlyBracket);
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(135);
					match(NewLine);
					}
					}
					setState(138); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NewLine );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(Class);
				setState(141);
				((ClassDeclarationContext)_localctx).className = match(ClassIndentifier);
				System.out.println("ClassDec : " + (((ClassDeclarationContext)_localctx).className!=null?((ClassDeclarationContext)_localctx).className.getText():null));
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Less) {
					{
					setState(143);
					match(Less);
					setState(144);
					((ClassDeclarationContext)_localctx).parent = match(ClassIndentifier);
					System.out.println("Inheritance : " + (((ClassDeclarationContext)_localctx).className!=null?((ClassDeclarationContext)_localctx).className.getText():null) + " < " + (((ClassDeclarationContext)_localctx).parent!=null?((ClassDeclarationContext)_localctx).parent.getText():null));
					}
				}

				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(148);
					match(NewLine);
					}
					}
					setState(151); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NewLine );
				setState(166);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(153);
					classVariable();
					setState(155); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(154);
						match(NewLine);
						}
						}
						setState(157); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NewLine );
					}
					break;
				case 2:
					{
					setState(159);
					classMethod();
					setState(161); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(160);
						match(NewLine);
						}
						}
						setState(163); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NewLine );
					}
					break;
				case 3:
					{
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public List<ClassVariableContext> classVariable() {
			return getRuleContexts(ClassVariableContext.class);
		}
		public ClassVariableContext classVariable(int i) {
			return getRuleContext(ClassVariableContext.class,i);
		}
		public List<ClassMethodContext> classMethod() {
			return getRuleContexts(ClassMethodContext.class);
		}
		public ClassMethodContext classMethod(int i) {
			return getRuleContext(ClassMethodContext.class,i);
		}
		public List<TerminalNode> NewLine() { return getTokens(SimpleLOOPParser.NewLine); }
		public TerminalNode NewLine(int i) {
			return getToken(SimpleLOOPParser.NewLine, i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Private || _la==Public) {
				{
				setState(177);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(170);
					classVariable();
					setState(172); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(171);
						match(NewLine);
						}
						}
						setState(174); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NewLine );
					}
					break;
				case 2:
					{
					setState(176);
					classMethod();
					}
					break;
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassVariableContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode Private() { return getToken(SimpleLOOPParser.Private, 0); }
		public TerminalNode Public() { return getToken(SimpleLOOPParser.Public, 0); }
		public ClassVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassVariableContext classVariable() throws RecognitionException {
		ClassVariableContext _localctx = new ClassVariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classVariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			_la = _input.LA(1);
			if ( !(_la==Private || _la==Public) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(183);
			variableDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassMethodContext extends ParserRuleContext {
		public Token methodName;
		public TerminalNode LeftParenthesis() { return getToken(SimpleLOOPParser.LeftParenthesis, 0); }
		public MethodDeclarationArgumentsContext methodDeclarationArguments() {
			return getRuleContext(MethodDeclarationArgumentsContext.class,0);
		}
		public TerminalNode RightParenthesis() { return getToken(SimpleLOOPParser.RightParenthesis, 0); }
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public TerminalNode Private() { return getToken(SimpleLOOPParser.Private, 0); }
		public TerminalNode Public() { return getToken(SimpleLOOPParser.Public, 0); }
		public TerminalNode Identifier() { return getToken(SimpleLOOPParser.Identifier, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Void() { return getToken(SimpleLOOPParser.Void, 0); }
		public TerminalNode Initialize() { return getToken(SimpleLOOPParser.Initialize, 0); }
		public ClassMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassMethodContext classMethod() throws RecognitionException {
		ClassMethodContext _localctx = new ClassMethodContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classMethod);
		int _la;
		try {
			setState(204);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(185);
				_la = _input.LA(1);
				if ( !(_la==Private || _la==Public) ) {
				_errHandler.recoverInline(this);
				}
				else {
